--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
-    "child_process": "^1.0.2",
-    "dotenv": "^16.3.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "request": "^2.88.2",
-    "stream": "^0.0.2",
-    "wav": "^1.0.2"
-  }
+    "dotenv": "^16.3.1",    
+    "node-telegram-bot-api": "^0.61.0"  
+    }
 }
